# 1C_creator_new

./: .gitignore  CHANGELOG.md  README.md  build.py  build.spec  build.toml  config.json  how_to_build.txt  pyproject.toml  release.py  requirements.txt  ui.spec
.github/workflows/: build-exe.yml  test.yml
build-tools/: build.py  build.toml  release.py
docs/: dev_guide.md  readme.md  teamly.md
examples/: Sample.csv
src/: hierarchy_parser.py  main.py  ui.py  xml_generator.py
src/modules/: modified_csv_exporter.py  xml_generator.py
src/monitel_framework/: __init__.py  _init__.py  config.py  files.py  logging.py  ui_base.py  utils.py
tests/: conftest.py  test_config.py  test_files.py  test_logging.py  test_ui_base.py
