[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-to-rdf-converter"  # ✅ Только ASCII
version = "1.0.0"
description = "GUI конвертер CSV → RDF/XML (CIM16)"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["csv", "rdf", "cim", "converter"]
dependencies = [
    "PyQt6",
    "toml"
]
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--no-cov-on-fail"
]

[tool.coverage.run]
source = ["src"]
omit = ["*/venv/*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
precision = 2